[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/projectiles/Projectile.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/projectiles/bullet_omni.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.4
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 3 )

[node name="Projectile" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 16, 0 )
hframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="Projectile" type="Area2D" parent="Sprite"]
position = Vector2( 30, 0 )
collision_layer = 8
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Projectile"]
position = Vector2( -11, 0 )
shape = SubResource( 2 )
[connection signal="area_entered" from="Sprite/Projectile" to="." method="_on_Projectile_area_entered"]
[connection signal="body_entered" from="Sprite/Projectile" to="." method="_on_Area2D_body_entered"]
[connection signal="tree_exited" from="Sprite/Projectile" to="." method="_on_Projectile_tree_exited"]
